# thesis

./: .gitignore  5gen.ipynb  MC_processer.ipynb  analytical.py  dataImporter.py  dataProcesser.py  dc_events.py  diag_v2.ipynb  diagonalization-1.ipynb  diagonalization.ipynb  event_processing.ipynb  event_processing.py  event_processing_nsi.ipynb  event_processing_s34.ipynb  events.py  functions.py  get_events.py  inspectData.ipynb  nsi.ipynb  nsi_get_events.py  numerical.py  plotter.py  post_process.py  pyproject.toml  requirements.txt  symbolic.py  test.ipynb  test_tf.ipynb
article/: article.bib  article.tex  elsarticle-num.bst
data/: E_ratios.csv  dc.json  event_rate_astro.csv  event_rate_z.csv  giunti_cl90.csv  giunti_cl99.csv  ic_34_cl90.csv  ic_34_cl99.csv  ic_34_contour.csv  ic_cl90.csv  ic_cl99.csv
latex/: SM.tex  commands.tex  notes.bib  notes.tex  nsi.tex  oscillations.tex  questions.tex  ref.bib  sterile.tex
meeting_notes/: 02Mar.txt  13Nov  16Oct.txt  17Nov  23Nov  23Okt.txt  26Jan.txt  27Nov  2Oct.txt  30Oct.txt  5Nov.txt  9Oct.txt  log
notebooks/: NSItheory.ipynb  event_processing.ipynb  event_processing_s34.ipynb  flux.ipynb  inspectData.ipynb  inspectDataDC.ipynb  joint.ipynb  nsi_test.ipynb  test.ipynb
old/: H0_N21.p  H0_N9.p  H1_34_N9_1x10x10_notau.p  H1_no34_N9_20x20_notau.p  deprecated.py  energy_res.ipynb  solver_2d_test.py  tf_solver.py
plots/: destination.csv  fig4.csv  fig6.csv  fig7.csv  out.csv  sandhya_paper_1.py  sandya_paper_2.py  smirnov_2013.py
pre_computed/: H0_DC_0.p  H0_DC_1.p  H0_N13.p  H0_N13_nsi.p  H0_N13_nsi_emt.p  (+68 more)
(+192 files in other folders)
